--- a/web_sayfası.html
+++ b/web_sayfası.html
@@ -79,7 +79,7 @@
         <h2>Eğitim</h2>
         <ol>
             <li>Erciyes Üniversitesi - Fen Bilgisi Eğitimi</li>
-            <li>Mustafa Erarslan Anadolu Lisesi </li>
+            <li>Mustafa Eraslan Anadolu Lisesi </li>
             <li>Intel İş Yerinde Teknoloji Kursu</li>
         </ol>
     </section>
@@ -87,7 +87,7 @@
     <section>
         <h2>İş Deneyimi</h2>
         <ul>
-            <li>Stajyer - Evrimsel Genombilim Kış Okulu</li>
+            <li>Stajyer - Genom ve Kök Hücre Merkezi</li>
         </ul>
     </section>
 
@@ -124,4 +124,5 @@
     </footer>
 
 </body>
+
 </html>
