--- a/web_sayfası.html
+++ b/web_sayfası.html
@@ -78,8 +78,8 @@
     <section>
         <h2>Eğitim</h2>
         <ol>
-            <li>Erciyes Üniversitesi - Fen Bilgisi Eğitimi</li>
-            <li>Mustafa Eraslan Anadolu Lisesi </li>
+            <li>Erciyes Üniversitesi</li>
+            <li>Mustafa Eraslan Anadolu Lisesi</li>
             <li>Intel İş Yerinde Teknoloji Kursu</li>
         </ol>
     </section>
@@ -126,4 +126,5 @@
 </body>
 
 </html>
+
 
